# birthday_reminder_bot

./: .env.example  .gitignore  .pre-commit-config.yaml  README.md  docker-compose.yaml  pyproject.toml
alembic/: env.py
alembic/versions/: 11cbe42b9621_init_tables.py  1fe0d16f449b_update_communications.py  83c5f55ea77c_update_users_table_add_first_name_last_.py  8b67f9b59d85_update_tables.py  945c65ccb642_update_communications.py  c1eff65b0b66_add_user_and_event_tables.py  ef4cf56983e0_init_tables.py
src/app/: bot.py  config.py  main.py
src/app/application/service/: event_service.py
src/app/application/services/: __init__.py  event_service.py  user_service.py
src/app/config/: config.py  containers.py  logging.py
src/app/domain/: enums.py  event.py  user.py  user_birthdays.py
src/app/infrastructure/db/: database.py
src/app/infrastructure/db/mappers/: events.py  user.py  user_birtday.py
src/app/infrastructure/db/models/: __init__.py  events.py  user_birthdays.py  users.py
src/app/infrastructure/db/repository/: __init__.py  event_repository.py  user_repository.py
src/app/infrastructure/event_tracker/: __init__.py  birthday_scheduler.py  scheduler.py
src/app/presentation/: schemas.py
src/app/presentation/handlers/: __init__.py
src/app/presentation/handlers/users/: base.py  birthday.py  states.py
