[project]
name = "birthday_reminder_bot"
version = "0.1.0"
description = ""
authors = [
    {name = "AndreyFinyak",email = "afinyak@yahoo.com"}
]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "sqlalchemy (>=2.0.43,<3.0.0)",
    "alembic (>=1.16.5,<2.0.0)",
    "pydantic-settings (>=2.10.1,<3.0.0)",
    "pydantic (>=2.11.7,<3.0.0)",
    "dependency-injector (>=4.48.1,<5.0.0)"
]

[tool.poetry]
packages = [{include = "app", from = "src"}]


[tool.poetry.group.dev.dependencies]
pre-commit = "^4.3.0"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
