[project]
name = "birthday_reminder_bot"
version = "0.1.0"
description = ""
authors = [
    {name = "AndreyFinyak",email = "afinyak@yahoo.com"}
]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "sqlalchemy (>=2.0.43,<3.0.0)",
    "alembic (>=1.16.5,<2.0.0)",
    "pydantic-settings (>=2.10.1,<3.0.0)",
    "pydantic (>=2.11.7,<3.0.0)",
    "dependency-injector (>=4.48.1,<5.0.0)",
    "asyncpg (>=0.30.0,<0.31.0)",
    "greenlet (>=3.2.4,<4.0.0)",
    "aiogram (>=3.22.0,<4.0.0)",
    "apscheduler (>=3.11.0,<4.0.0)"
]

[tool.poetry]
packages = [{include = "app", from = "src"}]
include = ["src"]


[tool.poetry.group.dev.dependencies]
pre-commit = "^4.3.0"
black = "^25.1.0"
isort = "^6.0.1"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 79
target-version = ["py311"]
skip-string-normalization = true

[tool.isort]
line_length = 79
profile = "black"
multi_line_output = 3
include_trailing_comma = true
use_parentheses = true
ensure_newline_before_comments = true

[tool.pytest.ini_options]
addopts = "-v --maxfail=1 --disable-warnings"
testpaths = ["tests"]
asyncio_mode = "auto"
